made navbar fixed and changed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+
+body::-webkit-scrollbar {
+  width: 17px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #C2B5A8;
+}
+
 *{
   box-sizing: border-box;
   padding: 0;
@@ -162,4 +182,5 @@ a{
     margin: 4rem 2rem;
   }
 }
+
 
