--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,6 +3,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 2rem 4rem;
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: #FFFFFF;
+    width: 100%;
+    box-shadow: 0 0 5 rgba(0,0,0,0.2)
 }
 
 .name__navbar-links{
